--- a/index.html
+++ b/index.html
@@ -7,12 +7,208 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="loreal.css" />
+
+    <!-- Inline CSS -->
+    <style>
+      :root {
+        --brand-black: #000000;
+        --brand-white: #ffffff;
+        --brand-gold: #c8a46b;
+        --text: #1a1a1a;
+        --muted: #666666;
+        --bg: #f7f7f7;
+        --bubble-user: #101010;
+        --bubble-ai: #ffffff;
+        --shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+      }
+
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+
+      html, body {
+        height: 100%;
+      }
+
+      body {
+        font-family: "Montserrat", system-ui, -apple-system, Segoe UI, Arial, Helvetica, sans-serif;
+        background: var(--bg);
+        color: var(--text);
+        display: flex;
+        justify-content: center;
+      }
+
+      .page-wrapper {
+        width: 94%;
+        max-width: 900px;
+        padding: 24px;
+      }
+
+      .site-header {
+        padding: 24px 0 12px;
+        text-align: center;
+      }
+
+      .brand {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 14px;
+      }
+
+      .logo {
+        height: 36px;
+        filter: grayscale(100%) contrast(120%);
+      }
+
+      .site-title {
+        font-weight: 700;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+      }
+
+      .tagline {
+        color: var(--muted);
+        margin-top: 6px;
+      }
+
+      .card {
+        background: var(--brand-white);
+        border: 1px solid #eaeaea;
+        border-radius: 18px;
+        box-shadow: var(--shadow);
+      }
+
+      .chatbox {
+        margin: 28px 0;
+        padding: 16px;
+      }
+
+      .chat-window {
+        height: 420px;
+        overflow-y: auto;
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        background: linear-gradient(180deg, #fff 0%, #fff 60%, #f9f9f9 100%);
+        border-radius: 14px;
+        border: 1px solid #eee;
+      }
+
+      .bubble {
+        padding: 12px 14px;
+        border-radius: 16px;
+        max-width: 78%;
+        line-height: 1.5;
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.04);
+        word-wrap: break-word;
+      }
+
+      .bubble.user {
+        align-self: flex-end;
+        background: var(--bubble-user);
+        color: var(--brand-white);
+        border: 1px solid #111;
+      }
+
+      .bubble.ai {
+        align-self: flex-start;
+        background: var(--bubble-ai);
+        border: 1px solid #ececec;
+      }
+
+      .last-question {
+        margin: 10px 6px 0;
+        font-size: 0.9rem;
+        color: var(--muted);
+        border-left: 3px solid var(--brand-gold);
+        padding-left: 10px;
+        display: none;
+      }
+
+      .chat-form {
+        display: flex;
+        gap: 10px;
+        margin-top: 12px;
+        padding: 8px;
+      }
+
+      .chat-form input {
+        flex: 1;
+        padding: 14px 16px;
+        border-radius: 12px;
+        border: 1px solid #ddd;
+        font-size: 1rem;
+        background: #fff;
+      }
+
+      .chat-form input:focus {
+        outline: 2px solid var(--brand-gold);
+        outline-offset: 2px;
+      }
+
+      .btn {
+        min-width: 54px;
+        border: none;
+        border-radius: 12px;
+        background: var(--brand-black);
+        color: #fff;
+        cursor: pointer;
+        padding: 0 18px;
+        font-weight: 700;
+        transition: transform 0.05s ease, opacity 0.2s ease;
+      }
+
+      .btn:hover { opacity: 0.9; }
+      .btn:active { transform: translateY(1px); }
+
+      .site-footer {
+        margin: 18px 0 8px;
+        text-align: center;
+        color: var(--muted);
+      }
+
+      .site-footer nav a {
+        color: inherit;
+        margin: 0 8px;
+        text-decoration: none;
+      }
+
+      .site-footer nav a:hover {
+        color: #333;
+      }
+
+      .typing {
+        display: flex;
+        gap: 6px;
+        align-items: center;
+        color: var(--muted);
+        font-size: 0.9rem;
+      }
+
+      .dot {
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        background: #bbb;
+        animation: blink 1.2s infinite;
+      }
+
+      .dot:nth-child(2) { animation-delay: 0.2s; }
+      .dot:nth-child(3) { animation-delay: 0.4s; }
+
+      @keyframes blink {
+        0%, 80%, 100% { opacity: 0.2; }
+        40% { opacity: 1; }
+      }
+    </style>
   </head>
 
   <body>
     <div class="page-wrapper">
-      <!-- Header / Branding -->
       <header class="site-header">
         <div class="brand">
           <img src="img/loreal-logo.png" alt="L’Oréal logo" class="logo" />
@@ -21,28 +217,15 @@
         <p class="tagline">Personalized routines & product guidance</p>
       </header>
 
-      <!-- Chat Area -->
       <main>
         <section class="chatbox card">
-          <div id="chatWindow" class="chat-window" aria-live="polite" aria-label="Chat transcript">
-            <!-- bubbles appear here -->
-          </div>
-
+          <div id="chatWindow" class="chat-window" aria-live="polite" aria-label="Chat transcript"></div>
           <div id="lastQuestion" class="last-question" aria-live="polite"></div>
 
           <form id="chatForm" class="chat-form" autocomplete="off">
             <label for="userInput" class="visually-hidden">Your message</label>
-            <input
-              id="userInput"
-              name="userInput"
-              type="text"
-              placeholder="Ask about L’Oréal products, skincare, haircare…"
-              required
-            />
-            <button type="submit" id="sendBtn" class="btn">
-              <span class="material-icon" aria-hidden="true">➤</span>
-              <span class="visually-hidden">Send</span>
-            </button>
+            <input id="userInput" name="userInput" type="text" placeholder="Ask about L’Oréal products, skincare, haircare…" required />
+            <button type="submit" id="sendBtn" class="btn">➤</button>
           </form>
         </section>
       </main>
